--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header>
+        <div id="icon">
+            <i style="color: greenyellow;"class="fa-solid fa-camera"></i>
+            <span>IMAGE</span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="About">About</a></li>
+                <li><a href="Blogs">Blogs</a></li>
+                <li><a href="Plans">Plans</a></li>
+                <li><a href="Gallery">Gallery</a></li>
+                <li><a href="Contact Us">Contact Us</a></li>
+            </ul>
+        </nav>
+        <button>Book Trial</button>
+    </header>
+    <div class="container">
+        <div class="div1">
+            <h3>Photographer's Blog</h3>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div class="grid">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+        </div>
+    </div>
+    <div class="footer">
+        <h3 style="color: rgb(136, 136, 194);">Start Your Journey</h3>
+        <h1 style="color: white;">Let's Capture the World</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button>Book Trial</button>
+    </div>
 </body>
 </html>
