--- a/index.html
+++ b/index.html
@@ -33,18 +33,21 @@
         </div>
         <div class="grid">
             <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/2.jpg" alt="">
+            <img src="./img/joshua-earle-yi6dvuynEuo-unsplash.jpg" alt="">
+            <img src="./img/joshua-earle-yi6dvuynEuo-unsplash.jpg" alt="">
             <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
-            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
-            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
-            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
-            <img src="./img/photo-1441974231531-c6227db76b6e.avif" alt="">
+            <img src="./img/2.jpg" alt="">
         </div>
     </div>
     <div class="footer">
-        <h3 style="color: rgb(136, 136, 194);">Start Your Journey</h3>
+        <h3 style="color: rgb(107, 107, 210);">Start Your Journey</h3>
         <h1 style="color: white;">Let's Capture the World</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><br>
         <button>Book Trial</button>
+    </div>
+    <div class="last">
+        
     </div>
 </body>
 </html>
