--- a/index.html
+++ b/index.html
@@ -47,7 +47,41 @@
         <button>Book Trial</button>
     </div>
     <div class="last">
-        
-    </div>
+            <div class="l3">
+                <h3>PhotoGraphy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, facere!</p>
+                 <div>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                 </div>
+            </div>
+            <div class="l3">
+                <h3>Contact Info</h3>
+                <h5>
+                    New Delhi,India
+                </h5>
+                <h5>
+                    +233446556789
+                </h5>
+                <h5>
+                    sjbbcj@gmail.com
+                </h5>
+                <h5>
+                    7:30 AM to 11:00 PM
+                </h5>
+            </div>
+            <div class="l3">
+                <h3>NewsLetter</h3>
+                <p>Subscribe for Latest Updates</p>
+                <input type="text" placeholder="enter your email">
+                <div class="icon">
+                    <button class="btn">
+                        Subscribe Now
+                    </button>
+                </div> 
+            </div>
+        </div>
 </body>
 </html>
