--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
     </div>
     <div class="last">
             <div class="l3">
-                <h3>PhotoGraphy</h3>
+                <h2>PhotoGraphy</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, facere!</p>
-                 <div>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                 <div class="i">
+                    <div class="abc"><i class="fa-brands fa-facebook-f "></i></div>
+                    <div class="abc"><i class="fa-brands fa-twitter"></i></div>
+                    <div class="abc"><i class="fa-brands fa-instagram"></i></div>
+                    <div class="abc"><i class="fa-brands fa-linkedin-in"></i></div>
                  </div>
             </div>
             <div class="l3">
-                <h3>Contact Info</h3>
+                <h2>Contact Info</h2>
                 <h5>
                     New Delhi,India
                 </h5>
@@ -73,7 +73,7 @@
                 </h5>
             </div>
             <div class="l3">
-                <h3>NewsLetter</h3>
+                <h2>NewsLetter</h2>
                 <p>Subscribe for Latest Updates</p>
                 <input type="text" placeholder="enter your email">
                 <div class="icon">
